--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose-url-slugs": "^0.2.1",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
     "serve-favicon": "^2.3.2"
   }
