--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
     "debug": "~2.2.0",
+    "email-templates": "^2.5.4",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "handlebars-helper-equal": "^1.0.0",
@@ -16,6 +17,7 @@
     "mongoose": "^4.6.8",
     "mongoose-url-slugs": "^0.2.1",
     "morgan": "^1.7.0",
+    "nodemailer": "^2.6.4",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
